kubernetes_OLD/yml/springbootweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springbootweb
  labels:
    app: springbootweb
spec:
#  serviceName: "springbootweb-hs"
  replicas: 1
  selector:
    matchLabels:
      app: springbootweb
  template:
    metadata:
      labels:
        app: springbootweb
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "7070"  
    spec:
      containers:
      - name: springbootweb
        image: marcinkasinski/springbootweb
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 7070
        volumeMounts:
        - name: config-springbootweb-bootstrap-yml-cm
          mountPath: /usr/src/myapp/config/bootstrap.yml
          subPath: bootstrap.yml
        - name: config-volume-springbootweb-0-truststore-jks
          mountPath: /usr/src/myapp/config/truststore-springbootweb-0.jks
          subPath: truststore-springbootweb-0.jks
        - name: config-volume-springbootweb-0-keystore-jks
          mountPath: /usr/src/myapp/config/keystore-springbootweb-0.jks
          subPath: keystore-springbootweb-0.jks
      volumes:
        - name: config-springbootweb-bootstrap-yml-cm
          configMap:
            name: springbootweb-bootstrap-yml-cm
        - name: config-volume-springbootweb-0-truststore-jks
          configMap:
            name: truststore-springbootweb-0.jks
        - name: config-volume-springbootweb-0-keystore-jks
          configMap:
            name: keystore-springbootweb-0.jks
---
apiVersion: v1
kind: Service
metadata:
  name: am-springbootweb
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind: Mapping
      name: am-springbootweb_mapping
      prefix: /
      timeout_ms: 10000
      service: am-springbootweb.apps:7070
      #only works via istio ingress gateway
      host: springbootweb.apps.svc.cluster.local:30999
      
spec:
  type: NodePort
  ports:
  - port: 7070
    #nodePort: 30070
    targetPort: 7070
    protocol: TCP
    name: http
  selector:
    app: springbootweb
---
apiVersion: v1
kind: Service
metadata:
  name: springbootweb
spec:
  type: NodePort
  ports:
  - port: 7070
    #nodePort: 30070
    targetPort: 7070
    protocol: TCP
    name: http
  selector:
    app: springbootweb
---
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springbootweb-ingress
  annotations:
    ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - host: springbootweb
    http:
      paths:
      - path: /
        backend:
          serviceName: springbootweb
          servicePort: 7070
---
#curl -H "Host: springbootweb.apps.svc.cluster.local:30999" localhost:30999/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: springbootweb
spec:
  hosts:
#  - "springbootweb.apps.svc.cluster.local:30999"
#  - "springbootweb:30999"
#  - "springbootweb.com:30999"
#  - "springbootweb.apps.svc.cluster.local"
#  - "springbootweb"
#  - "springbootweb.com"
    - "*"
  gateways:
  - itzone-gateway
  http:
  - match:
      - authority:
          exact: 'springbootweb.apps.svc.cluster.local:31380'
#    - uri:
#        prefix: /
#    - port: 31380
    route:
    - destination:
        host: springbootweb # interpreted as springbootweb.apps.svc.cluster.local
        #host: ambassador.default.svc.cluster.local # interpreted as springbootweb.apps.svc.cluster.local
        port:
          number: 7070
          #number: 80
